targets/srv0/k3s/copyparty/copyparty.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      securityContext:
        runAsUser: $MY_UID
        runAsGroup: $MY_UID
        seLinuxOptions:
          level: s0
      containers:
        - name: copyparty
          image: copyparty/ac:1.20.19
          ports:
            - containerPort: 3923
              name: http
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          readinessProbe:
            exec:
              command:
                - wget
                - --spider
                - -q
                - http://127.0.0.1:3923/
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /cfg/copyparty.conf
              subPath: copyparty.conf
              readOnly: true
            - name: state
              mountPath: /state
            - name: data
              mountPath: /w
      volumes:
        - name: config
          secret:
            secretName: copyparty-config
        - name: state
          persistentVolumeClaim:
            claimName: copyparty-state-pvc
        - name: data
          persistentVolumeClaim:
            claimName: hostpath-main-node-main-parent-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: apps
spec:
  selector:
    app: copyparty
  ports:
    - name: http
      port: 3923
      targetPort: 3923
