targets/srv0/k3s/copyparty/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: copyparty-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`copyparty.home.local`)
      kind: Rule
      middlewares:
        - name: lan-whitelist
          namespace: base
      services:
        - name: copyparty
          port: 3923
  tls: {}
